[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memos"
version = "0.18.9"
description = "A package for memos"
readme = "README.md"
authors = [{ name = "arkohut" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "pydantic",
    "sqlalchemy",
    "typer",
    "magika",
    "pydantic-settings",
    "opencv-python",
    "pillow",
    "piexif",
    "imagehash",
    "rapidocr_onnxruntime",
    "rapidocr_openvino; sys_platform == 'win32'",
    "py-cpuinfo",
    "psutil",
    "pywin32; sys_platform == 'win32'",
    "pyobjc-core; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz; sys_platform == 'darwin'",
    "ocrmac; sys_platform == 'darwin'",
    "sentence-transformers",
    "torch",
    "numpy",
    "timm",
    "einops",
    "modelscope",
    "mss",
    "sqlite_vec",
    "watchdog",
]

[project.urls]
Homepage = "https://github.com/arkohut/memos"

[project.scripts]
memos = "memos.commands:app"

[tool.setuptools.packages.find]
include = ["memos*"]

[tool.setuptools.package-data]
"*" = ["static/**/*"]
"memos.plugins.ocr" = ["*.yaml", "models/*.onnx"]
"memos" = ["simple_tokenizer/**/*", "default_config.yaml"]
